--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement('script');
-      scriptTag.src = 'main.dart.js';
+      scriptTag.src = 'main.dart.js?v=4';
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
